--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon bin/www.js --exec babel-node ",
+    "start": "nodemon bin/www.js --exec ./node_modules/.bin/babel-node ",
     "release": "npm run clean && npm run build && npm run serve",
     "clean": "rm -rf dist && mkdir dist",
     "serve": "node dist/server.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "bcrypt": "^5.0.1",
+
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
     "express": "~4.16.1",
+    "express-async-handler":"^1.2.0",
     "express-session": "^1.17.1",
     "firebase-admin": "^9.11.0",
     "http-errors": "~1.6.3",
