--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-CONNECTION_STRING = mongodb+srv://hatem:hatem123@tfarhida.yucrv.mongodb.net/tfarhida?retryWrites=true&w=majority
+MONGODB_URI = "mongodb+srv://dbBasma:@basma123@dbpmo.fb9qa.mongodb.net/dbPmo?retryWrites=true&w=majority"
+Mail = "teampmo22@gmail.com"
+Mp_Mail = "@@teampmo2022"
